k8s/gitea/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: gitea
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`git.kevingomez.fr`)
      services:
        - kind: Service
          name: gitea-http
          port: http
  tls:
    secretName: gitea-cert
